all 3 sections added, layout issue present

--- a/app/page.css
+++ b/app/page.css
@@ -1,9 +1,19 @@
-@font-face {
-    font-family: montserrat;
-    src: url("Fonts/Montserrat-Regular.ttf");
-  }
-  
-  #Deal-div{
+
+body{
+  font-family: 'Montserrat', sans-serif;
+}
+
+  .boxDiff {
+    border: 1px solid rgb(255,255,255,0.5);
+    border-radius: 20px;
+}
+
+.divider{
+    /* background-color: rgb(255,255,255,0.15); */
+    border-top: 1px solid rgb(255,255,255,0.5);
+}
+
+  /* #Deal-div{
     display: flex;
     justify-content: centre;
     flex-direction: column;
@@ -59,16 +69,14 @@
     align-items: end;
     min-width: 20vw;
     text-align: left;
-    /* box-shadow: 2px 0px 2px 8px black inset; */
+    box-shadow: 2px 0px 2px 8px black inset;
   }
   p{
     margin-bottom: 1%;  
-    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
     font-family: montserrat;
     font-size: 18px;
     font-weight: 400;
-    /* font-weight: 700;
-    font-size: 64px; */
+    
     max-width: 85%;
   }
   #container-div{
@@ -84,7 +92,6 @@
     font-weight: 700;
     font-size: 64px;
   }
-  /* now we add background images to each div in container-div */
   #top-left{
     background-image: url("Images/Top-Left.png");
     background-repeat: no-repeat;
@@ -114,5 +121,6 @@
     flex-grow: 2;
     flex-basis:30vw;
     background-size: cover;
-  }
+  } 
+  */
   
